# br-wallet

./: .gitignore  Cargo.toml  README.md
scripts/: generate_precomputed_table.py
src/: lib.rs  main.rs
src/brainwallet/: bitcoin.rs  brain_wallet.rs  ethereum.rs  litecoin.rs  mod.rs  solana.rs
src/comparer/: comparer.rs  mod.rs
src/metal/: batch.rs  brainwallet.metal  gpu.rs  mod.rs  precomputed_table.metal
src/reader/: mod.rs  reader.rs
tests/: edge_case_tests.rs  gpu_cpu_compare.rs  gpu_stress_test.rs  integration_test.rs  known_brainwallet_test.rs  test_bitcoin_targets.json  test_ethereum_targets.json  test_litecoin_targets.json  test_solana_targets.json
