[package]
name = "brwallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kriptografi
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["global-context"] }
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"

# Performans ve Dosya İşleme
rayon = "1.10"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = { version = "0.17", features = ["rayon"] }
bincode = "1.3"
bech32 = "0.11.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ed25519-dalek = "2.1"