[package]
name = "brwallet"
version = "3.0.0"
edition = "2021"
description = "GPU-accelerated brainwallet cracker for Bitcoin, Litecoin, Ethereum"
license = "MIT"

[lib]
name = "brwallet"
path = "src/lib.rs"

[[bin]]
name = "brwallet"
path = "src/main.rs"

# No optional features - GPU is REQUIRED
# This application is designed for maximum performance using Apple Metal

[dependencies]
# Cryptography (CPU fallback for testing only)
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["global-context"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Encoding
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"
bech32 = "0.11.1"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Performance
rayon = "1.10"
memmap2 = "0.9"
rustc-hash = "2.0"  # FxHash - 3-5x faster than std HashMap

# UI
indicatif = { version = "0.17", features = ["rayon"] }

# GPU (Metal) - REQUIRED for this application
metal = "0.29"
objc = "0.2"
block = "0.1"
lazy_static = "1.5"
crossbeam-channel = "0.5"
k256 = "0.13"
parking_lot = "0.12"

# System
libc = "0.2"
